--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "npm": "please-use-yarn"
   },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
+    "build": "cross-env NODE_ENV=production next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write .",
+    "fix-code": "yarn lint && yarn prettier",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "12.2.3",
@@ -22,8 +25,11 @@
     "@types/node": "18.6.2",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "cross-env": "^7.0.3",
     "eslint": "8.20.0",
     "eslint-config-next": "12.2.3",
+    "husky": "^8.0.1",
+    "prettier": "^2.7.1",
     "typescript": "4.7.4"
   }
 }
