--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "nextjs-template-for-teams",
   "version": "0.1.0",
   "private": true,
   "engines": {
@@ -33,5 +33,8 @@
     "husky": "^8.0.1",
     "prettier": "^2.7.1",
     "typescript": "4.7.4"
+  },
+  "resolutions": {
+    "webpack": "^5"
   }
 }
