--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "next": "12.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
